tests/neg-custom-args/safe-init/override17.scala
class A { self : B =>
  val y = x  // error
}

class B {
  val x = 10
}